# nonebot-plugin-molar-mass

./: .gitignore  LICENSE  README.md  calc.py  elements.py  main.py  parse.py  parser.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
chemcalc/: __init__.py
nonebot_plugin_molar_mass/: __init__.py  calc.py
tests/: test_calc.py
